src/test/resources/inspections/relativeEntry/quickFix3.gitignore
<error descr="'/../bar' entry contains relative path">/../<caret>bar</error>